--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
 
   <!-- =======================================================
   * Template Name: WeCode
-  * Template URL: https://bootstrapmade.com/WeCode-bootstrap-app-landing-page-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Author: Aravind Marshall
   ======================================================== -->
 </head>
 
