--- a/starter-page.html
+++ b/starter-page.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Starter Page - WeCode Bootstrap Template</title>
+  <title>Starter Page - WeCode</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -29,10 +29,7 @@
 
   <!-- =======================================================
   * Template Name: WeCode
-  * Template URL: https://bootstrapmade.com/WeCode-bootstrap-app-landing-page-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Author: Aravind Marshall
   ======================================================== -->
 </head>
 
