--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
   <!-- =======================================================
   * Template Name: WeCode
-  * Author: Aravind Marshall
+  * Template URL: https://bootstrapmade.com/WeCode-bootstrap-app-landing-page-template/
+  * Updated: Aug 07 2024 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
 
@@ -88,7 +91,7 @@
           </div>
           <div class="col-lg-8 d-flex flex-column justify-content-center align-items text-center text-md-start" data-aos="fade-up">
             <h2>Promote Your App with WeCode</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
+            <p>We specialize in crafting innovative software and website applications tailored to meet the unique needs of our clients.</p>
             <div class="d-flex mt-4 justify-content-center justify-content-md-start">
               <a href="#" class="download-btn"><i class="bi bi-google-play"></i> <span>Google Play</span></a>
               <a href="#" class="download-btn"><i class="bi bi-apple"></i> <span>App Store</span></a>
@@ -107,8 +110,8 @@
 
           <div class="col-xl-5 content">
             <h3>About Us</h3>
-            <h2>Ducimus rerum libero reprehenderit cumque</h2>
-            <p>Ipsa sint sit. Quis ducimus tempore dolores impedit et dolor cumque alias maxime. Enim reiciendis minus et rerum hic non. Dicta quas cum quia maiores iure. Quidem nulla qui assumenda incidunt voluptatem tempora deleniti soluta.</p>
+            <h2>WeCode</h2>
+            <p>we specialize in crafting innovative software and website applications tailored to meet the unique needs of our clients. With a passionate team of developers, designers, and strategists, we leverage the latest technologies to deliver robust solutions that drive business success.</p>
             <a href="#" class="read-more"><span>Read More</span><i class="bi bi-arrow-right"></i></a>
           </div>
 
@@ -118,32 +121,32 @@
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                 <div class="icon-box">
                   <i class="bi bi-buildings"></i>
-                  <h3>Eius provident</h3>
-                  <p>Magni repellendus vel ullam hic officia accusantium ipsa dolor omnis dolor voluptatem</p>
+                  <h3>Website Creation</h3>
+                  <p>Help promote clients business</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="icon-box">
                   <i class="bi bi-clipboard-pulse"></i>
-                  <h3>Rerum aperiam</h3>
-                  <p>Autem saepe animi et aut aspernatur culpa facere. Rerum saepe rerum voluptates quia</p>
+                  <h3>Software Apps</h3>
+                  <p>Developing Software Applications</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="icon-box">
                   <i class="bi bi-command"></i>
-                  <h3>Veniam omnis</h3>
-                  <p>Omnis perferendis molestias culpa sed. Recusandae quas possimus. Quod consequatur corrupti</p>
+                  <h3>Android Apps</h3>
+                  <p>Developing Android Apps</p>
                 </div>
               </div> <!-- End Icon Box -->
 
               <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="icon-box">
                   <i class="bi bi-graph-up-arrow"></i>
-                  <h3>Delares sapiente</h3>
-                  <p>Sint et dolor voluptas minus possimus nostrum. Reiciendis commodi eligendi omnis quideme lorenda</p>
+                  <h3>IOS Apps</h3>
+                  <p>Developing IOS Apps</p>
                 </div>
               </div> <!-- End Icon Box -->
 
@@ -754,7 +757,7 @@
   <footer id="footer" class="footer dark-background">
     <div class="container">
       <h3 class="sitename">WeCode</h3>
-      <p>Excellent Skills on developing Wwbsites, Software Applications, android apps based on Clients need.</p>
+      <p>Excellent Skills on developing Websites, Software Applications, Android Apps based on Clients need.</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
